fix: delegate all AgentConfig methods in CommandOverrideAgentConfig
CommandOverrideAgentConfig was only delegating a subset of AgentConfig
interface methods to its wrapped delegate. Methods not explicitly
overridden fell back to the interface default implementations, which
silently broke any profile that used a custom start command:

- denyBuiltInToolsViaPermissions() returned false (default) instead of
  true → addExtraSessionParams() in JunieAcpClient skipped the
  excludedTools/toolFilter/allowList injection entirely
- getSessionInstructions() returned null (default) → startup
  instructions were never sent via session/message
- Other missing delegations: getPermissionInjectionMethod,
  getEffectiveMcpServerName, getToolNameRegex/Replacement,
  requiresResourceDuplication, sendResourceReferences,
  supportsSessionMessage, clearSavedModel, getMcpConfigTemplate,
  getMcpServerName, requiresMcpInSessionNew

Fix: add explicit overrides for all missing AgentConfig interface
methods, each delegating to the wrapped config.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>