@@ -15,7 +15,7 @@ import java.util.List;
 /**
  * Decorator that overrides binary discovery and process building with a user-provided
  * command string, while delegating all other agent-specific concerns (display name,
- * notification group, init parsing, auth, modes) to the wrapped config.
+ * notification group, init parsing, auth, modes, tool config) to the wrapped config.
  *
  * <p>Used when the user edits the start command in the connect panel away from
  * the agent's default.</p>
@@ -52,7 +52,7 @@ final class CommandOverrideAgentConfig implements AgentConfig {
         if (tokens.isEmpty()) {
             throw new AcpException("No start command configured.", null, false);
         }
-        String binary = tokens.get(0);
+        String binary = tokens.getFirst();
         if (new File(binary).isAbsolute() && !new File(binary).exists()) {
             throw new AcpException("Binary not found: " + binary, null, false);
         }
@@ -101,8 +101,73 @@ final class CommandOverrideAgentConfig implements AgentConfig {
         return delegate.requiresResourceContentDuplication();
     }
 
+    @Override
+    public boolean denyBuiltInToolsViaPermissions() {
+        return delegate.denyBuiltInToolsViaPermissions();
+    }
+
+    @Override
+    public @NotNull com.github.catatafishen.ideagentforcopilot.services.PermissionInjectionMethod getPermissionInjectionMethod() {
+        return delegate.getPermissionInjectionMethod();
+    }
+
+    @Override
+    public @NotNull String getEffectiveMcpServerName() {
+        return delegate.getEffectiveMcpServerName();
+    }
+
+    @Override
+    public @Nullable String getToolNameRegex() {
+        return delegate.getToolNameRegex();
+    }
+
+    @Override
+    public @Nullable String getToolNameReplacement() {
+        return delegate.getToolNameReplacement();
+    }
+
+    @Override
+    public boolean requiresResourceDuplication() {
+        return delegate.requiresResourceDuplication();
+    }
+
+    @Override
+    public boolean sendResourceReferences() {
+        return delegate.sendResourceReferences();
+    }
+
+    @Override
+    public boolean supportsSessionMessage() {
+        return delegate.supportsSessionMessage();
+    }
+
+    @Override
+    public @Nullable String getSessionInstructions() {
+        return delegate.getSessionInstructions();
+    }
+
+    @Override
+    public void clearSavedModel() {
+        delegate.clearSavedModel();
+    }
+
+    @Override
+    public @Nullable String getMcpConfigTemplate() {
+        return delegate.getMcpConfigTemplate();
+    }
+
+    @Override
+    public @NotNull String getMcpServerName() {
+        return delegate.getMcpServerName();
+    }
+
+    @Override
+    public boolean requiresMcpInSessionNew() {
+        return delegate.requiresMcpInSessionNew();
+    }
+
     private List<String> parseCommand() {
-        if (rawCommand == null || rawCommand.isBlank()) {
+        if (rawCommand.isBlank()) {
             return List.of();
         }
         return new ArrayList<>(Arrays.asList(rawCommand.trim().split("\\s+")));
